--- a/.github/workflows/install-arachne-docker-compose.yml
+++ b/.github/workflows/install-arachne-docker-compose.yml
@@ -18,13 +18,13 @@ jobs:
       uses: actions/checkout@v2
 
     # Set up Docker
-    - name: Set up Docker
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y apt-transport-https ca-certificates curl software-properties-common
-        curl -fsSL https://get.docker.com -o get-docker.sh
-        sudo sh get-docker.sh
-        sudo usermod -aG docker $USER
+    #- name: Set up Docker
+     # run: |
+      #  sudo apt-get update
+       # sudo apt-get install -y apt-transport-https ca-certificates curl software-properties-common
+        #curl -fsSL https://get.docker.com -o get-docker.sh
+        #sudo sh get-docker.sh
+        #sudo usermod -aG docker $USER
     
     - name: Verify Docker installation
       run: docker --version
@@ -43,6 +43,11 @@ jobs:
         # Add any environment variables here if needed (for example, for DB connections)
         # export MY_ENV_VAR=value
         echo "Environment setup complete."
+
+    - name: List files in repository
+      run: |
+        echo "Listing files in the repository:"
+        ls -R
 
     # Start Arachne using Docker Compose
     - name: Start Arachne with Docker Compose
