--- a/.github/workflows/install-arachne-docker-compose.yml
+++ b/.github/workflows/install-arachne-docker-compose.yml
@@ -60,9 +60,11 @@ jobs:
     # Optionally, verify the Arachne container is running
     - name: Verify Arachne is running
       run: |
+      
         docker ps  # List running containers to ensure Arachne containers are up
 
     # Optional: Check if Arachne is accessible (assuming it exposes a web service)
     - name: Test Arachne installation
       run: |
-        curl -s http://localhost:8080  # Replace with the correct port if needed
+      
+        curl -v http://localhost:8080  # Replace with the correct port if needed
