--- a/.github/workflows/install-arachne-docker-compose.yml
+++ b/.github/workflows/install-arachne-docker-compose.yml
@@ -72,11 +72,11 @@ jobs:
       run: sleep 30  # Wait for 30 seconds (adjust based on your needs)
 
     # Optional: Check if Arachne is accessible (assuming it exposes a web service)
-    - name: Test Arachne installation
+    ##- name: Test Arachne installation
       # Replace with the correct port if needed
-      run: |    
+      ##run: |    
       
-        curl -v http://localhost:8080 
+        ##curl -v http://localhost:8080 
     
     - name: Check Arachne heakthcheck URL with curl
       run: |
